[project]
name = "src"
version = "0.1.0"
description = "Exploring the concept of knowledge-informed machine learning while predicting remaining-useful-life"
authors = [
    {name = "Tim von Hahn"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "jupyterlab",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "pandas",
    "scikit-learn",
    "click",
    "h5py",
    "gdown"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
